--- a/style.css
+++ b/style.css
@@ -94,3 +94,39 @@ button {
     flex-direction: column;
     align-items: center;
 }
+@media (max-width: 720px) {
+    #roohpic{
+        height: 300px;
+        width: 250px;
+    }
+    #roohsection{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        font-size: 12px;
+        
+    }
+    #roohsection button{
+padding: 12px;
+    }
+
+    .pg1 .img{
+height: 280px;
+width: 250px;
+position: relative;
+
+}
+.img img {
+    position: absolute;
+    top: -20px;
+    right: -20%;
+    width: 300px;
+    height: 354px;
+}
+    .inline-btn{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    
+}
